Changes for v2.0.0 - Import WAS Finding into Burp Repeater